# qalkulator-calculator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  io.github.mpengellyca.kalk.desktop  io.github.mpengellyca.kalk.flatpak.yaml  io.github.mpengellyca.kalk.metainfo.xml  io.github.mpengellyca.qalkulator.desktop  io.github.mpengellyca.qalkulator.flatpak.yaml  io.github.mpengellyca.qalkulator.metainfo.xml  io.github.mpengellyca.qalkulator.metainfo.xml.in  version.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  windows.yml
docs/: mcp.md  multi-window-instances.md
packaging/appimage/: build-appimage.sh
packaging/arch/: PKGBUILD
packaging/kwin/qalkulator-magnetic/: metadata.json
packaging/kwin/qalkulator-magnetic/contents/code/: main.js
packaging/windows/: deploy-windows.sh  kalk.nsi  qalkulator.nsi  qalkulator.rc
qml/: AccessKeyOverlay.qml  ConverterView.qml  ExpressionField.qml  KeyCap.qml  Keypad.qml  Main.qml  ModeBar.qml  ResultPreview.qml  ResultRegisterPopup.qml  ResultRegisterView.qml  SettingsDialog.qml  StatusBar.qml  UnitPickerPopup.qml
src/: CMakeLists.txt  calcinstance.cpp  calcinstance.h  calculatorengine.cpp  calculatorengine.h  currencyservice.cpp  currencyservice.h  kalk.kcfg  kalkconfig.kcfgc  kwinscript.cpp  kwinscript.h  main.cpp  mcpbridge.cpp  mcpserver.cpp  mcpserver.h  qalkulator.kcfg  qalkulatorconfig.kcfgc  resultregistermodel.cpp  resultregistermodel.h  windowmanager.cpp  windowmanager.h
src/qml/: AmountHistoryPopup.qml  CalcWindow.qml  ConverterView.qml  ExpressionField.qml  Main.qml  ModeBar.qml  ResultPreview.qml  ResultRegisterPopup.qml  ResultRegisterView.qml  SettingsDialog.qml  StatusBar.qml  Style.qml  ToolsBar.qml  UnitPickerPopup.qml  Units.qml  WindowSpawner.qml
